[chore] add facebook pixel

--- a/public/index.html
+++ b/public/index.html
@@ -29,9 +29,26 @@
       href="https://fonts.googleapis.com/css2?family=DM+Sans:ital,wght@0,400;0,500;0,700;1,400;1,500;1,700&family=Montserrat:ital,wght@0,100;0,400;0,500;0,600;0,700;0,800;1,300;1,700&family=Poppins:wght@400;500;600;700&family=Raleway:wght@300;400;500;700&display=swap"
       rel="stylesheet"
     />
-    <title>React App</title>
+    <title>Tatiane Modena</title>
   </head>
   <body>
+    <!-- Meta Pixel Code --> 
+      <script> 
+        !function(f,b,e,v,n,t,s) 
+        {if(f.fbq)return;n=f.fbq=function(){n.callMethod? 
+        n.callMethod.apply(n,arguments):n.queue.push(arguments)}; 
+        if(!f._fbq)f._fbq=n;n.push=n;n.loaded=!0;n.version='2.0'; 
+        n.queue=[];t=b.createElement(e);t.async=!0; 
+        t.src=v;s=b.getElementsByTagName(e)[0]; 
+        s.parentNode.insertBefore(t,s)}(window, document,'script', 
+        'https://connect.facebook.net/en_US/fbevents.js'); 
+        fbq('init', '1166809817312523'); 
+        fbq('track', 'PageView'); 
+      </script> 
+      <noscript><img height="1" width="1" style="display:none" 
+        src="https://www.facebook.com/tr?id=1166809817312523&ev=PageView&noscript=1" 
+      /></noscript> 
+    <!-- End Meta Pixel Code -->
     <noscript>You need to enable JavaScript to run this app.</noscript>
     <div id="root"></div>
     <!--
